--- a/MatrixTest/MatrixTest.csproj
+++ b/MatrixTest/MatrixTest.csproj
@@ -50,7 +50,10 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="AdjugateTest.cs" />
     <Compile Include="AliasTest.cs" />
+    <Compile Include="DeterminantTest.cs" />
+    <Compile Include="InverseTest.cs" />
     <Compile Include="MatrixHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TraceTest.cs" />
